make item box nicer on smaller screens + match quote to correct image

--- a/static/css/article.less
+++ b/static/css/article.less
@@ -97,3 +97,9 @@
 .comment-author {
   padding-left: 15%;
 }
+
+.box-item img {
+  @media(max-width: 1024px) {
+    padding-bottom: 25px;
+  }
+}
